--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
         <section id="investment" class="features">
           <div class="container">
             <div class="section-title mb-5" data-aos="fade-down">
-              <span>Investment Portfolio</span>
-              <h2>Investment Portfolio</h2>
+              <span>Portfolio</span>
+              <h2>Portfolio</h2>
               <p>A Partnership that Supports Exceptional Founders.</p>
             </div>
             <div class="row">
@@ -412,7 +412,7 @@
             </div>
 
             <div class="row">
-              <div class="col-xl-3 col-lg-4 col-md-6"></div>
+              <div class="col-xl-3 col-lg-4 col-md-hidden"></div>
               <div class="col-xl-3 col-lg-4 col-md-6">
                 <div class="member" data-aos="fade-up" data-aos-delay="100">
                   <img src="assets/img/Adil.png" class="img-thumbnail" alt="" />
